force-app/main/default/objects/EventTypes__c/EventTypes__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar os tipos de eventos ( tipos de visitas ) as quais o RTV podem realizar.</description>
    
    <label>Tipo de Visita</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de Visitas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>