force-app/main/default/objects/EventTypes__c/fields/MandatoryImagesQuantity__c.field-meta.xml
<CustomField>
    <fullName>MandatoryImagesQuantity__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Quantidade de imagens obrigatórias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>